k8s/k8s/deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wellandgood
  labels:
    app: wellandgood
    env: test
spec:
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 10%
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: wellandgood
  template:
    metadata:
      labels:
        app: wellandgood
        env: test
    spec:
      volumes:
        - name: ugc
          nfs:
            server: nfs1.lv7.leaf.io
            path: "/wellngood_web_ugc"
        - name: wp-webroot
          emptyDir: {}
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: php-ini
          configMap:
            name: php-ini
      containers:
        - name: nginx
          image: nginx:1.13.7-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: wp-webroot
              mountPath: /var/www/html
            - name: ugc
              mountPath: "/var/www/html/wp-content/uploads"
        - name: wellandgood
          image: docker-registry.dmdmedia.net:443/sre/wellandgood:1
          volumeMounts:
            - name: wp-webroot
              mountPath: /var/www/html
            - name: ugc
              mountPath: "/var/www/html/wp-content/uploads"
            - name: php-ini
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              name: insecure
