k8s/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wellandgood
    env: test
  name: wellandgood
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wellandgood
  sessionAffinity: None
  type: ClusterIP
